--- a/package.json
+++ b/package.json
@@ -3,18 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
+    "cross-fetch": "^3.1.5",
+    "jest": "^28.0.0",
+    "node-fetch": "^3.2.3",
+    "react": "^18.0.0",
+    "react-datepicker": "^4.7.0",
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
+    "react-scripts": "5.0.1",
+    "react-testing-library": "^8.0.1",
+    "typescript": "^4.6.3",
+    "web-vitals": "^2.1.4",
+    "enzyme-to-json": "^3.6.2",
+    "redux-mock-store": "^1.5.4",
+    "enzyme": "^3.11.0",
+    "@types/enzyme": "^3.10.12",
+    "@types/enzyme-to-json": "^1.5.4",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.29",
     "@types/react": "^18.0.7",
+    "@types/react-datepicker": "^4.4.1",
     "@types/react-dom": "^18.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "@types/redux-mock-store": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
