--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -57,5 +58,13 @@
     "@types/redux-mock-store": "^1.0.3",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "redux-mock-store": "^1.5.4"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{tsx,ts}",
+      "!src/index.tsx",
+      "!src/react-app-env.d.ts",
+      "!src/reportWebVitals.ts"
+    ]
   }
 }
