--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "spacex-launches",
+  "homepage": "https://mpcmarques.github.io/spaceX-launches",
   "version": "1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "cross-fetch": "^3.1.5",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
+    "gh-pages": "^3.2.3",
     "jest": "^28.0.0",
     "react": "^18.0.0",
     "react-datepicker": "^4.7.0",
@@ -23,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
